--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <audio id="sonido-campana" src="campana.mp3" preload="auto"></audio>
   <div class="container">
-    <h1>Rutina de Ejercicios</h1>
+    <h1>Rutinax de Ejercicios</h1>
 
     <select id="selector-dia">
       <option value="">Selecciona un día</option>
